--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.1
 blinker==1.8.2
 click==8.1.7
 Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
