Sutvarkytas admin panel, pridetas funkcionalumas

--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,13 +1,15 @@
 # A generic, single database configuration.
 
 [alembic]
+# path to migration scripts
+script_location = migrations
+
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
-
 
 # Logging configuration
 [loggers]
@@ -48,3 +50,10 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
+
+# Database connection URL
+# SQLite
+sqlalchemy.url = sqlite:///C:\\Users\\lukas\\OneDrive\\Desktop\\Atsiskaitymas\\Tarpinis_2-1\\database.db
+
+# Uncomment and configure the following line for PostgreSQL
+# sqlalchemy.url = postgresql://username:password@localhost/database_name
