--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,59 +1,43 @@
 # A generic, single database configuration.
-
 [alembic]
 # path to migration scripts
 script_location = migrations
-
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
-
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
-
 # Logging configuration
 [loggers]
 keys = root,sqlalchemy,alembic,flask_migrate
-
 [handlers]
 keys = console
-
 [formatters]
 keys = generic
-
 [logger_root]
 level = WARN
 handlers = console
 qualname =
-
 [logger_sqlalchemy]
 level = WARN
 handlers =
 qualname = sqlalchemy.engine
-
 [logger_alembic]
 level = INFO
 handlers =
 qualname = alembic
-
 [logger_flask_migrate]
 level = INFO
 handlers =
 qualname = flask_migrate
-
 [handler_console]
 class = StreamHandler
 args = (sys.stderr,)
 level = NOTSET
 formatter = generic
-
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
-
 # Database connection URL
 # SQLite
-sqlalchemy.url = sqlite:///C:\\Users\\lukas\\OneDrive\\Desktop\\Atsiskaitymas\\Tarpinis_2-1\\database.db
-
-# Uncomment and configure the following line for PostgreSQL
-# sqlalchemy.url = postgresql://username:password@localhost/database_name
+sqlalchemy.url = sqlite:///database.db
